--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
             <div class="shipping-info">
                 <h1>Shipping address</h1>
             </div>
-            <div class="input-fullname">
+            <div class="input3">
                 <label for="full-name">Full Name</label>
 
             </div>
-            <div>
-                input
+            <div class="input-fullname">
+                <input type="text" name="fullname" id="fullname" placeholder="Enter your full name.." required >
+                <i class="fas fa-user"></i>
+
+                
 
             </div>
                 
